--- a/.eslintrc
+++ b/.eslintrc
@@ -18,5 +18,6 @@ rules:
   no-use-before-define: 0
   key-spacing: 0
   yoda: 0
+  max-len: 0
   # Change walmart's rule Because of the error with emacs flycheck
   filenames/filenames: [2, "^[a-z0-9\\-\\._]+$"]
